# prophecy

./: .gitignore  README.md  clairvoyant.doap  meson.build
.flatpak/: meson.sh  vala-language-server.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: flatpak.yml  gettext.yml
build-aux/flatpak/: space.rirusha.prophecy.yml
data/: meson.build  space.rirusha.prophecy.desktop.in  space.rirusha.prophecy.gresource.xml  space.rirusha.prophecy.metainfo.xml.in
data/icons/: meson.build
data/ui/: fortune-label.blp  window.blp
po/: POTFILES.in  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+158 more)
src/: about.vala  application.vala  config.vapi  fortune-label.vala  main-window.vala  main.vala  meson.build
